--- a/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
@@ -21,7 +21,7 @@
     
 <form action="Classifieds.php" method="post">
 
-<table style="border:1px solid black">
+<table >
     <tr>
         <td>Name of Ad</td>
         <td><textarea id="name" name="name" maxlength="255"  rows="5" cols="30"></textarea></textarea></td>
