--- a/OutworldzFiles/Apache/htdocs/index.html
+++ b/OutworldzFiles/Apache/htdocs/index.html
@@ -1,8 +1,40 @@
 <html>
  <head>
-  <title>PHP and Apache Test</title>
+  <title>PHP, Map,  and Apache Test Pages</title>
  </head>
  <body>
- <?php echo <p>Hello World</p>
+ 
+Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
+<p>
+ 
+Map examples:</p>
+
+ <ul>
+  <li><a href="/Metromap/map.php">Metropolis-style Map</a>
+  <li><a href="/Metromap/mapmax.php">Metropolis-style Large Map</a>
+  <li><a href="http://localhost:8002/wifi/map.html">Google Map</a>
+</ul>
+
+ <form action="Classifieds.htm" method="post">
+    <input type="Submit" name="Classified" value = "Create Classified Ad">
+</form>
+<form action="SearchClassifieds.php" method="post">
+    <input type="Submit" name="Classified" value = "Dump Classified Ad">
+</form>
+<form action="SearchParcel.php" method="post">
+    <input type="Submit" name="Parcels" value = "List Parcels">
+</form>
+<form action="ShowHosts.php" method="post">
+    <input type="Submit" name="Ports" value = "Dump Region Ports">
+</form>
+<form action="SearchRegions.php" method="post">
+    <input type="Submit" name="Regions" value = "Dump Regions">
+</form>
+<form action="SearchObjects.php" method="post">
+    <input type="Submit" name="Objects" value = "Dump Objects">
+</form>
+
+        
+        
  </body>
 </html>
