--- a/OutworldzFiles/Apache/htdocs/index.html
+++ b/OutworldzFiles/Apache/htdocs/index.html
@@ -15,22 +15,22 @@ Map examples:</p>
   <li><a href="http://localhost:8002/wifi/map.html">Google Map</a>
 </ul>
 
- <form action="Classifieds.htm" method="post">
+ <form action="/Search/Classifieds.htm" method="post">
     <input type="Submit" name="Classified" value = "Create Classified Ad">
 </form>
-<form action="SearchClassifieds.php" method="post">
+<form action="/Search/SearchClassifieds.php" method="post">
     <input type="Submit" name="Classified" value = "Dump Classified Ad">
 </form>
-<form action="SearchParcel.php" method="post">
+<form action="/Search/SearchParcel.php" method="post">
     <input type="Submit" name="Parcels" value = "List Parcels">
 </form>
-<form action="ShowHosts.php" method="post">
+<form action="/Search/ShowHosts.php" method="post">
     <input type="Submit" name="Ports" value = "Dump Region Ports">
 </form>
-<form action="SearchRegions.php" method="post">
+<form action="/Search/SearchRegions.php" method="post">
     <input type="Submit" name="Regions" value = "Dump Regions">
 </form>
-<form action="SearchObjects.php" method="post">
+<form action="/Search/SearchObjects.php" method="post">
     <input type="Submit" name="Objects" value = "Dump Objects">
 </form>
 
