--- a/OutworldzFiles/Apache/htdocs/index.html
+++ b/OutworldzFiles/Apache/htdocs/index.html
@@ -4,10 +4,16 @@
  </head>
  <body>
  
-Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
 <p>
- 
-Map examples:</p>
+Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
+</p>
+
+<p>
+    Search: <a href="http://localhost/Search">http://localhost:80/Search</a>
+</p>
+<p>
+Map examples:
+</p>
 
  <ul>
   <li><a href="/Metromap/map.php">Metropolis-style Map</a>
