Hop Links in map

--- a/OutworldzFiles/Apache/htdocs/index.html
+++ b/OutworldzFiles/Apache/htdocs/index.html
@@ -3,7 +3,8 @@
   <title>PHP, Map,  and Apache Test Pages</title>
  </head>
  <body>
- 
+
+<!-- 
 <p>
 Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
 </p>
@@ -14,13 +15,15 @@ Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
 <p>
 Map examples:
 </p>
-
+-->
  <ul>
-  <li><a href="/Metromap/map.php">Metropolis-style Map</a>
-  <li><a href="/Metromap/mapmax.php">Metropolis-style Large Map</a>
-  <li><a href="http://localhost:8002/wifi/map.html">Google Map</a>
+  <li>Metropolis-style <a href="/Metromap/map.php">Map</a>
+  <li>Metropolis-style <a href="/Metromap/mapmax.php">Large Map</a>
+  <li>Metropolis-style <a href="/Metromap/index.php">Map Framed</a>
+  <li>Metropolis-style <a href="/Metromap/indexmax.php">Large Map Framed</a>
 </ul>
 
+<!--
  <form action="/Search/Classifieds.htm" method="post">
     <input type="Submit" name="Classified" value = "Create Classified Ad">
 </form>
@@ -39,7 +42,7 @@ Map examples:
 <form action="/Search/SearchObjects.php" method="post">
     <input type="Submit" name="Objects" value = "Dump Objects">
 </form>
-
+-->
         
         
  </body>
