--- a/OutworldzFiles/Opensim/WifiPages-Black/splash.html
+++ b/OutworldzFiles/Opensim/WifiPages-Black/splash.html
@@ -18,6 +18,10 @@
         <br />
 
         <div class="right-nav-divider"></div>
+		<ul>
+		  <li><a href="/wifi/map.html">GLOBAL MAP</a></li>
+		  <li><a href="#" id="map">LARGE MAP</a></li>
+		</ul>
         <!--#call method=GetAddonsMenu -->
         <br />
 
@@ -55,6 +59,10 @@
       </div>
       <!-- #include file=footer.html -->
     </div>
-
+<script type="text/javascript">
+  var link = "http://" + window.location.hostname + "/Metromap/map.php";
+  var yourElement = document.getElementById('map');
+  yourElement.setAttribute('href', link);
+</script>
   </body>
 </html>
