--- a/OutworldzFiles/Opensim/bin/WifiPages-White/index.html
+++ b/OutworldzFiles/Opensim/bin/WifiPages-White/index.html
@@ -36,6 +36,7 @@
         <br />
 
         <div class="right-nav-divider"></div>
+		<ul><li><a href="/wifi/map.html">GLOBAL MAP</a></li></ul>
         <!--#call method=GetAddonsMenu -->
         <br />
 		
