Restart on Physics and restart on Fail Classifieds

--- a/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
@@ -27,12 +27,31 @@
         <td><textarea id="name" name="name" maxlength="255"  rows="5" cols="30"></textarea></textarea></td>
     </tr>
     <tr>
+        <td>Rating</td>
+        <td><select name="rating">
+            <option value="4">G Rated</option>
+            <option value="8">Mature</option>
+            <option value="64">Adult</option>
+            <option value="4">Special Attraction</option>
+            <option value="5">New Products</option>
+            <option value="6">Employment</option>
+            <option value="7">Wanted</option>
+            <option value="8">Service</option>
+            <option value="9">Personal</option>
+            </select></td>
+    </tr>
+    <tr>
         <td>Category</td>
         <td><select name="category">
-            <option value="volvo">Volvo</option>
-            <option value="saab">Saab</option>
-            <option value="fiat">Fiat</option>
-            <option value="audi">Audi</option>
+            <option value="1">Shopping</option>
+            <option value="2">Land Rental</option>
+            <option value="3">Property Rental</option>
+            <option value="4">Special Attraction</option>
+            <option value="5">New Products</option>
+            <option value="6">Employment</option>
+            <option value="7">Wanted</option>
+            <option value="8">Service</option>
+            <option value="9">Personal</option>
             </select>
         </td>
     </tr>
