--- a/OutworldzFiles/Opensim/WifiPages/links.html
+++ b/OutworldzFiles/Opensim/WifiPages/links.html
@@ -1,4 +1,4 @@
-<p class="nav-headline">Links</p>
+﻿<p class="nav-headline">Links</p>
 <div id="posts">
   <ul>
 	<li><a href="http://www.outworldz.com">Outworldz.com</a></li>
