--- a/OutworldzFiles/Opensim/bin/WifiPages/iars.html
+++ b/OutworldzFiles/Opensim/bin/WifiPages/iars.html
@@ -1,5 +1,4 @@
-<div id="iarlink"><a href="#" onclick="showForm('iar', loadIARForm)"  >
+<a href="#" onclick="showForm('iar', loadIARForm)">
           Upload IAR</a>
-</div>
 <div id="iar"></div>
 
