--- a/OutworldzFiles/Opensim/WifiPages/splash.html
+++ b/OutworldzFiles/Opensim/WifiPages/splash.html
@@ -5,8 +5,6 @@
     <link rel="shortcut icon" href="/wifi/images/favicon.ico" />
     <link rel="stylesheet" media="screen" type="text/css" href="/wifi/fluid.css" />
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-
-
   </head>
 
   <body>
@@ -26,7 +24,8 @@
 		</ul>
         <!--#call method=GetAddonsMenu -->
         <br />
-		<div class="right-nav-divider"></div>
+
+        <div class="right-nav-divider"></div>
         <!--#call method=GetLoginLogout --> 
         <br />
 
@@ -35,10 +34,10 @@
       </div> <!-- end right side navigation -->
 
       <div id="content"> <!-- content area of page -->
-        <!--#include file=content-box.html -->
+        <!--#include file=content-box.html --> 
 		<p>&nbsp;</p>
-       <img src="/wifi/images/header.png" style="width:100%; max-width:800px;" />
-		  <p class="white"><br />
+        <img src="/wifi/images/orange-planets-background.jpg" style="width:100%; max-width:400px;" />
+        <p class="white"><br />
           <span class="nowrap">Users in World: <!-- #get var=UsersInworld --></span> &nbsp;&nbsp;&nbsp;&nbsp;
           <span class="nowrap">Regions: <!-- #get var=RegionsTotal --></span> &nbsp;&nbsp;&nbsp;&nbsp;
           <span class="nowrap">Total Users: <!-- #get var=UsersTotal --></span> &nbsp;&nbsp;&nbsp;&nbsp;
@@ -50,19 +49,20 @@
     <div id="footer">
       <div id="right-footer">
       <div class="right-nav-divider"></div>
-	  <a href="https://www.outworldz.com"><img class="logo" src="/wifi/images/BuiltbyFred.jpg" width = "70"/></a><br>
         <img class="logo" src="/wifi/images/diva.png"><br>
+        <a href="https://www.outworldz.com"><img class="logo" src="/wifi/images/BuiltbyFred.jpg" width = "70"/></a>
+          <br>
         <a href="http://opensimulator.org"><img class="logo" src="/wifi/images/PoweredByOS.png"/></a>
         <br>
+        
+        
       </div>
       <!-- #include file=footer.html -->
     </div>
-	
 <script type="text/javascript">
   var link = "http://" + window.location.hostname + "/Metromap/map.php";
   var yourElement = document.getElementById('map');
   yourElement.setAttribute('href', link);
 </script>
-
   </body>
 </html>
