--- a/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
@@ -15,7 +15,7 @@
     }
     maxLength(document.getElementById("text"));
 </script>
-
+<link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
     
