--- a/OutworldzFiles/Apache/htdocs/error404.htm
+++ b/OutworldzFiles/Apache/htdocs/error404.htm
@@ -1,5 +1,8 @@
 <html>
-	<body>
-		<h1>Error 404</h1>
-	</body>
+<head>
+<link rel="shortcut icon" hhref="/favicon.ico"
+</head>
+<body>
+<h1>Error 404</h1>
+</body>
 </html>
