--- a/OutworldzFiles/Apache/htdocs/error404.htm
+++ b/OutworldzFiles/Apache/htdocs/error404.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="shortcut icon" hhref="/favicon.ico"
+<link rel="shortcut icon" href="/favicon.ico"
 </head>
 <body>
 <h1>Error 404</h1>
