--- a/OutworldzFiles/Apache/htdocs/index.html
+++ b/OutworldzFiles/Apache/htdocs/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <title>PHP, Map,  and Apache Test Pages</title>
-  <link rel="shortcut icon" href="/favicon.ico"
+  <link rel="shortcut icon" href="/favicon.ico">
  </head>
  <body>
 
