--- a/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
@@ -59,23 +59,25 @@ $(document).ready(function(){
 	})
 	
 	$("#flex1").flexigrid({
-		url: '/Search/search_json.php',
+		url: '/Search/SearchParcel.php',
 		dataType: 'json',
         method: 'GET',
 		colModel : [
 			{display: 'Hop', name : 'hop', width : 35, sortable : false, align: 'left'},		
-			{display: 'Name', name : 'Name', width : 140, sortable : true, align: 'left'},			
-			{display: 'Description', name : 'Description', width : 160, sortable : true, align: 'left'},			
-			{display: 'Region name', name : 'Regionname', width :125, sortable : true, align: 'left'},
-			{display: 'Location', name : 'Location', width : 190, sortable : true, align: 'left'}
+			//{display: 'Grid', name : 'Grid', width : 140, sortable : true, align: 'left'},			
+			{display: 'Description', name : 'Description', width : 300, sortable : true, align: 'left'},						//{display: 'Region', name : 'Regionname', width :125, sortable : true, align: 'left'},
+			{display: 'Parcel', name : 'Parcelname', width :125, sortable : true, align: 'left'},
+			//{display: 'Location', name : 'Location', width : 100, sortable : true, align: 'left'},
+			{display: 'Category', name : 'Category', width : 120, sortable : true, align: 'left'},
+			{display: 'Mature', name : 'Mature', width : 60, sortable : true, align: 'left'}
 			],
 		
 		searchitems : [
-		 {display: 'Name', name :'Name', isdefault: true},
-		 {display: 'Description', name :'Description', isdefault: false}
+		 {display: 'Grid', name :'Grid', isdefault: false},
+		 {display: 'Description', name :'Description', isdefault: true}
 		 
 		],
-		sortname: 'Name',
+		sortname: 'Description',
 		sortorder: 'asc',
 		usepager: true,
 		title: 'Click header to sort. Search button is at the bottom left.',
@@ -99,10 +101,6 @@ $(document).ready(function(){
 </script>
 
 <link rel="stylesheet" type="text/css" media="all" href="/flexgrid/css/flexigrid.css" />
-<!--<link rel="stylesheet" type="text/css" media="all" href="/Search/style.css" />-->
-
-
-
 <link rel="shortcut icon" href="/favicon.ico">
 
 </head>
