Search working with Hyperica and locally

--- a/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
@@ -16,6 +16,8 @@
     maxLength(document.getElementById("text"));
 </script>
 <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
     
