--- a/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
@@ -2,9 +2,10 @@
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
 <meta charset="utf-8">
-<title>Opensimular search</title>
+<title>Grid-wide Opensimulator search</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript"  src="/flexgrid/js/flexigrid.js"></script>
+
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <script type="text/javascript">
@@ -17,26 +18,17 @@ $(document).ready(function(){
 	})
 	
 	$("#flex1").flexigrid({
-		url: '/Search/SearchParcel.php',
+		url: '/Search/SearchHosts.php',
 		dataType: 'json',
         method: 'GET',
 		colModel : [
 			{display: 'Hop', name : 'hop', width : 35, sortable : false, align: 'left'},		
-			{display: 'Description', name : 'Description', width : 210, sortable : true, align: 'left'},
-			{display: 'Parcel', name : 'Parcelname', width :125, sortable : true, align: 'left'},
-			{display: 'Build', name : 'Build', width : 40, sortable : true, align: 'left'},
-			{display: 'Category', name : 'Category', width : 120, sortable : true, align: 'left'},
-			{display: 'Mature', name : 'Mature', width : 60, sortable : true, align: 'left'}
+			{display: 'Grid', name : 'Grid', width : 440, sortable : true, align: 'left'}			
 			],
-		
 		searchitems : [
-		 {display: 'Grid', name :'Grid', isdefault: true},
-		 {display: 'Description', name :'Description', isdefault: false},
-		 {display: 'Parcel name', name :'Parcelname', isdefault: false},
-		 {display: 'Mature', name :'Mature', isdefault: false}
-		 
+		 {display: 'Grid', name :'Grid', isdefault: true},	 
 		],
-		sortname: 'Description',
+		sortname: 'Grid',
 		sortorder: 'asc',
 		usepager: true,
 		title: 'Click header to sort. Search button is at the bottom left.',
