Sitemap and Search titles

--- a/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/Classifieds.htm
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title>Classified Ad</title>
+<title>Opensimulator Search Classified Ad by Outworldz.com</title>
 
 <script type="text/javascript">
     function maxLength(el) {    
