--- a/OutworldzFiles/Apache/htdocs/Search/SearchRegions.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchRegions.htm
@@ -2,7 +2,7 @@
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
 <meta charset="utf-8">
-<title>Opensimular search</title>
+<title>Opensimulator search Regions by Outworldz.com</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript"  src="/flexgrid/js/flexigrid.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
