--- a/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
@@ -2,7 +2,7 @@
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
 <meta charset="utf-8">
-<title>Grid-wide Opensimulator search</title>
+<title>Opensimulator search hosts by Outworldz.com</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript"  src="/flexgrid/js/flexigrid.js"></script>
 
