Search has 4 buttons

--- a/OutworldzFiles/Apache/htdocs/Search/Events.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/Events.htm
@@ -1,9 +1,10 @@
 <html>
-<!-- AGPL 3.0 by Fred Beckhusen -->    
+<meta license="AGPL 3.0 by Outworldz, LLC">    
 <head>
 <meta charset="utf-8">
-<title>Opensimulator Search Classified Ad by Outworldz.com</title>
 <meta license="AGPL 3.0 by Outworldz, LLC">
+<title>Opensimulator Search Classified Ad by Outworldz.com</title>
+
 <script type="text/javascript">
     function maxLength(el) {    
         if (!('maxLength' in el)) {
