--- a/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
@@ -1,6 +1,7 @@
 <html lang="en-us">
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
+<meta license="AGPL 3.0 by Outworldz, LLC">	
 <meta charset="utf-8">
 <title>Opensimulator search hosts by Outworldz.com</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -59,6 +60,7 @@ $(document).ready(function(){
 <body>
 <div id="Links">
 <a href="index.php" target="_self"><button>Objects</button></a>
+<a href="SearchEvents.htm" target="_self"><button>HG Events</button></a>
 <a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>
 <a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
 <a href="SearchHosts.htm" target="_self"><button>Grids</button></a>
