--- a/OutworldzFiles/Apache/htdocs/Search/SearchRegions.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchRegions.htm
@@ -2,6 +2,7 @@
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
 <meta charset="utf-8">
+<meta license="AGPL 3.0 by Outworldz, LLC">	
 <title>Opensimulator search Regions by Outworldz.com</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript"  src="/flexgrid/js/flexigrid.js"></script>
@@ -64,6 +65,7 @@ $(document).ready(function(){
 <body>
 <div id="Links">
 <a href="index.php" target="_self"><button>Objects</button></a>
+<a href="SearchEvents.htm" target="_self"><button>HG Events</button></a>
 <a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>
 <a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
 <a href="SearchHosts.htm" target="_self"><button>Grids</button></a>
