One Link to rule them all

--- a/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
@@ -23,12 +23,13 @@ $(document).ready(function(){
         method: 'GET',
 		colModel : [
 			{display: 'Hop', name : 'hop', width : 35, sortable : false, align: 'left'},		
-			{display: 'Description', name : 'Description', width : 210, sortable : true, align: 'left'},
 			{display: 'Parcel', name : 'Parcelname', width :125, sortable : true, align: 'left'},
+			{display: 'Description', name : 'Description', width : 210, sortable : true, align: 'left'},
 			{display: 'Build', name : 'Build', width : 35, sortable : true, align: 'left'},
-			{display: 'Category', name : 'Category', width : 120, sortable : true, align: 'left'},
-			{display: '', name : 'Mature', width : 30, sortable : true, align: 'left'},
-			{display: 'Rating', name : 'dwell', width : 35, sortable : true, align: 'left'}
+			{display: 'Script', name : 'Script', width : 40, sortable : true, align: 'left'},
+			{display: 'Category', name : 'Category', width : 80, sortable : true, align: 'left'},
+			{display: 'M/G', name : 'Mature', width : 30, sortable : true, align: 'left'},
+			{display: 'Rank', name : 'dwell', width : 35, sortable : true, align: 'left'}
 			],
 		
 		searchitems : [
