Add online Hours

--- a/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchHosts.htm
@@ -24,7 +24,8 @@ $(document).ready(function(){
         method: 'GET',
 		colModel : [
 			{display: 'Hop', name : 'hop', width : 35, sortable : false, align: 'left'},		
-			{display: 'Grid', name : 'Grid', width : 440, sortable : true, align: 'left'}			
+			{display: 'Grid', name : 'Grid', width : 440, sortable : true, align: 'left'},
+			{display: 'Online Hours', name : 'Hours', width : 150, sortable : true, align: 'left'}			
 			],
 		searchitems : [
 		 {display: 'Grid', name :'Grid', isdefault: true},	 
