--- a/OutworldzFiles/Apache/htdocs/Search/SearchEvents.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchEvents.htm
@@ -21,6 +21,7 @@ $(document).ready(function(){
 		url: 'SearchEvents.php',
 		dataType: 'json',
         method: 'GET',
+		nowrap: false,
 		colModel : [
 			{display: 'Links', name : 'location', width : 35, sortable : false, align: 'left'},		
 			{display: 'Name', name : 'name', width : 170, sortable : true, align: 'left'},
@@ -68,7 +69,7 @@ $(document).ready(function(){
 <div id="Links">
 <a href="index.php" target="_self"><button>Objects</button></a>
 <a href="SearchEvents.htm" target="_self"><button>HG Events</button></a>
-<a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>
+<!--<a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>-->
 <a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
 <a href="SearchHosts.htm" target="_self"><button>Grids</button></a>
 <a href="SearchRegions.htm" target="_self"><button>Regions</button></a>
