--- a/OutworldzFiles/Apache/htdocs/Search/SearchRegions.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchRegions.htm
@@ -21,6 +21,7 @@ $(document).ready(function(){
 		url: '/Search/SearchRegions.php',
 		dataType: 'json',
         method: 'GET',
+		nowrap: false,
 		colModel : [
 			{display: 'Hop', name : 'hop', width : 35, sortable : false, align: 'left'},		
 			{display: 'Grid', name : 'Grid', width : 260, sortable : true, align: 'left'}	,		
@@ -66,7 +67,7 @@ $(document).ready(function(){
 <div id="Links">
 <a href="index.php" target="_self"><button>Objects</button></a>
 <a href="SearchEvents.htm" target="_self"><button>HG Events</button></a>
-<a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>
+<!--<a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>-->
 <a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
 <a href="SearchHosts.htm" target="_self"><button>Grids</button></a>
 <a href="SearchRegions.htm" target="_self"><button>Regions</button></a>
