reorder Search and fix regions search & sort

--- a/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchParcel.htm
@@ -71,12 +71,13 @@ $(document).ready(function(){
 
 <body>
 <div id="Links">
-<a href="index.php" target="_self"><button>Objects</button></a>
+<a href="index.htm" target="_self"><button>Grids</button></a>
+<a href="SearchRegions.htm" target="_self"><button>Regions</button></a> 
+<a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
+<a href="SearchObjects.htm" target="_self"><button>Objects</button></a>
 <a href="SearchEvents.htm" target="_self"><button>HG Events</button></a>
 <!--<a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>-->
-<a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
-<a href="SearchHosts.htm" target="_self"><button>Grids</button></a>
-<a href="SearchRegions.htm" target="_self"><button>Regions</button></a>
+&nbsp;&nbsp;&nbsp;&nbsp;
 <button onclick="location.reload();">Refresh Page</button>
 </div>
 <div id="greet">
