--- a/OutworldzFiles/Apache/htdocs/index.html
+++ b/OutworldzFiles/Apache/htdocs/index.html
@@ -17,7 +17,9 @@ Divi Wifi Pages: <a href="http://localhost:8002">http://localhost:8002</a>
 Map examples:
 </p>
 -->
- <ul>
+ 
+<ul>
+  <li>Metropolis-style <a href="/Search">Search</a>
   <li>Metropolis-style <a href="/Metromap/map.php">Map</a>
   <li>Metropolis-style <a href="/Metromap/mapmax.php">Large Map</a>
   <li>Metropolis-style <a href="/Metromap/index.php">Map Framed</a>
