--- a/OutworldzFiles/Apache/htdocs/Search/SearchObjects.htm
+++ b/OutworldzFiles/Apache/htdocs/Search/SearchObjects.htm
@@ -1,12 +1,10 @@
 <html lang="en-us">
 <!-- AGPL 3.0 by Fred Beckhusen -->
 <head>
-<meta license="AGPL 3.0 by Outworldz, LLC">	
 <meta charset="utf-8">
-<title>Opensimulator search hosts by Outworldz.com</title>
+<title>Opensimulator search Objects by Outworldz.com</title>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript"  src="/flexgrid/js/flexigrid.js"></script>
-
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <script type="text/javascript">
@@ -19,19 +17,24 @@ $(document).ready(function(){
 	})
 	
 	$("#flex1").flexigrid({
-		url: '/Search/SearchHosts.php',
+		url: '/Search/SearchObjects.php',
 		dataType: 'json',
         method: 'GET',
-		nowrap: false,
+        nowrap: false,
 		colModel : [
 			{display: 'Hop', name : 'hop', width : 35, sortable : false, align: 'left'},		
-			{display: 'Grid', name : 'Grid', width : 440, sortable : true, align: 'left'},
-			{display: 'Online Hours', name : 'Hours', width : 150, sortable : true, align: 'left'}			
+			{display: 'Name', name : 'Name', width : 200, sortable : true, align: 'left'},			
+			{display: 'Description', name : 'Description', width : 160, sortable : true, align: 'left'},			
+			{display: 'Region name', name : 'Regionname', width :225, sortable : true, align: 'left'},
+			
 			],
+		
 		searchitems : [
-		 {display: 'Grid', name :'Grid', isdefault: true},	 
+		 {display: 'Name', name :'Name', isdefault: true},
+		 {display: 'Description', name :'Description', isdefault: false}
+		 
 		],
-		sortname: 'Grid',
+		sortname: 'Name',
 		sortorder: 'asc',
 		usepager: true,
 		title: 'Click header to sort. Search button is at the bottom left.',
@@ -55,18 +58,20 @@ $(document).ready(function(){
 </script>
 
 <link rel="stylesheet" type="text/css" media="all" href="/flexgrid/css/flexigrid.css" />
+
 <link rel="shortcut icon" href="/favicon.ico">
 
 </head>
 
 <body>
 <div id="Links">
-<a href="index.php" target="_self"><button>Objects</button></a>
+<a href="index.htm" target="_self"><button>Grids</button></a>
+<a href="SearchRegions.htm" target="_self"><button>Regions</button></a> 
+<a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
+<a href="SearchObjects.htm" target="_self"><button>Objects</button></a>
 <a href="SearchEvents.htm" target="_self"><button>HG Events</button></a>
 <!--<a href="SearchClassifieds.htm" target="_self"><button>Classifieds</button></a>-->
-<a href="SearchParcel.htm" target="_self"><button>Parcels</button></a>
-<a href="SearchHosts.htm" target="_self"><button>Grids</button></a>
-<a href="SearchRegions.htm" target="_self"><button>Regions</button></a>
+&nbsp;&nbsp;&nbsp;&nbsp;
 <button onclick="location.reload();">Refresh Page</button>
 </div>
 <div id="greet">
