--- a/OutworldzFiles/Opensim/bin/WifiPages-White/map.html
+++ b/OutworldzFiles/Opensim/bin/WifiPages-White/map.html
@@ -1,69 +1,81 @@
 ﻿<!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
-<meta charset="utf-8"/>
-<title><!-- #get var=GridName --></title>
+    <meta charset="utf-8" />
+    <title><!-- #get var=GridName --></title>
 
-<style type="text/css">
-html, body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-}
-#map {
-	height: 100%;
-}
-</style>
+    <style type="text/css">
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
 
-<div id="map">
-	<script type="text/javascript">
+    <div id="map">
+        <script type="text/javascript">
 
-		var gridname = "<!-- #get var=GridName -->";
-		function initMap() {
-			var map = new google.maps.Map(document.getElementById('map'), {
-				center: {lat: 70, lng: 0, noWrap : true},
-				zoom: 3,
-				streetViewControl: false,
-				mapTypeControlOptions: {
-					mapTypeIds: ['moon']
-				}
-			});
-			
-			var moonMapType = new google.maps.ImageMapType({
-				getTileUrl: function(coord, zoom) {
-					var normalizedCoord = calcPos(coord.x, coord.y);
-					if (!normalizedCoord) {
-						return null;
-					}
-					var bound = Math.pow(2, zoom);
-					var url = '../map-1-' + normalizedCoord.x + '-' + normalizedCoord.y + '-objects.jpg';
-					
-					return url;
-				}, 
-				tileSize: new google.maps.Size(64, 64),
-				maxZoom: 3,
-				minZoom: 3,
-				radius: 17380000,
-				name: gridname
-			});
-				
-			map.mapTypes.set('moon', moonMapType);
-			map.setMapTypeId('moon');
-		}
-		
-	function calcPos(posX, posY)
-	{
-		var offsetY = 1007;
-		var offsetX = 985;
 
-		return {x: (offsetX + posX), y: (offsetY - posY)}
-	}
-	</script>
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9ea2Glkqtnd5S17SuCNEOwyxOhBQtzaA&signed_in=true&callback=initMap"></script>
-</div>	
+            function gup(name, def) {
+                name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
+                var regexS = "[\\?&]" + name + "=([^&#]*)";
+                var regex = new RegExp(regexS);
+                var results = regex.exec(window.location.href);
+                if (results == null)
+                    return def;
+                else
+                    return results[1];
+            }
+
+            var offsetX = gup("X", 1007);
+            var offsetY = gup("Y", 985);
+
+            var gridname = "<!-- #get var=GridName -->";
+            function initMap() {
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    center: { lat: 70, lng: 0, noWrap: true },
+                    zoom: 3,
+                    streetViewControl: false,
+                    mapTypeControlOptions: {
+                        mapTypeIds: ['moon']
+                    }
+                });
+
+                var moonMapType = new google.maps.ImageMapType({
+                    getTileUrl: function (coord, zoom) {
+                        var normalizedCoord = calcPos(coord.x, coord.y);
+                        if (!normalizedCoord) {
+                            return null;
+                        }
+                        var bound = Math.pow(2, zoom);
+                        var url = '../map-1-' + normalizedCoord.x + '-' + normalizedCoord.y + '-objects.jpg';
+
+                        return url;
+                    },
+                    tileSize: new google.maps.Size(64, 64),
+                    maxZoom: 3,
+                    minZoom: 3,
+                    radius: 17380000,
+                    name: gridname
+                });
+
+                map.mapTypes.set('moon', moonMapType);
+                map.setMapTypeId('moon');
+            }
+
+            function calcPos(posX, posY) {
+                return { x: (offsetX + posX), y: (offsetY - posY) }
+            }
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9ea2Glkqtnd5S17SuCNEOwyxOhBQtzaA&signed_in=true&callback=initMap"></script>
+    </div>
 
 </body>
 
