--- a/OutworldzFiles/Opensim/bin/WifiPages-White/map.html
+++ b/OutworldzFiles/Opensim/bin/WifiPages-White/map.html
@@ -34,8 +34,8 @@
                     return results[1];
             }
 
-            var offsetX = gup("X", 1007);
-            var offsetY = gup("Y", 985);
+            var offsetX = Number(gup("X", 1007)) ;
+            var offsetY = Number(gup("Y", 985)) ;
 
             var gridname = "<!-- #get var=GridName -->";
             function initMap() {
